--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ click==8.1.3
 deta==1.1.0
 dnspython==2.2.1
 email-validator==1.2.1
-fastapi==0.78.0
+fastapi
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
@@ -13,7 +13,7 @@ motor==3.0.0
 pydantic==1.9.1
 pymongo==4.1.1
 sniffio==1.2.0
-starlette==0.20.3
+starlette
 typing_extensions==4.2.0
 uvicorn==0.17.6
 uvloop==0.16.0
