--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,40 @@
-anyio==3.6.1
-asgiref==3.5.2
+anyio==3.5.0
+asgiref==3.4.1
+bcrypt==3.2.0
 certifi==2022.5.18.1
-click==8.1.3
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.0.3
+colorama==0.4.4
+cryptography==36.0.1
 deta==1.1.0
-dnspython==2.2.1
-email-validator==1.2.1
-fastapi
-h11==0.13.0
-httptools==0.4.0
+ecdsa==0.17.0
+fastapi==0.78.0
+fastapi-jwt-auth==0.5.0
+greenlet==1.1.2
+h11==0.12.0
+httptools==0.3.0
 idna==3.3
-motor==3.0.0
+passlib==1.7.4
+Pillow==9.1.1
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.9.1
-pymongo==4.1.1
+PyJWT==1.7.1
+python-dotenv==0.19.2
+python-jose==3.3.0
+PyYAML==6.0
+qrcode==7.3.1
+requests==2.27.1
+rsa==4.8
+six==1.16.0
 sniffio==1.2.0
-starlette
-typing_extensions==4.2.0
-uvicorn==0.17.6
-uvloop==0.16.0
-websockets==10.3
+SQLAlchemy==1.4.28
+SQLAlchemy-Utils==0.37.9
+starlette==0.19.1
+typing_extensions==4.0.1
+urllib3==1.26.8
+uvicorn==0.17.0
+watchgod==0.7
+websockets==10.1
+wincertstore==0.2
